# rules_patchelf_prebuilt

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yaml  integrity.jq  release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  test.bzl
patchelf_prebuilt/: BUILD.bazel  extensions.bzl  patchelf_binary.bzl  repositories.bzl  toolchain.bzl  version.bzl
patchelf_prebuilt/private/: BUILD.bazel  BUILD.bazel.patchelf  integrity.bzl  patchelf_sources.bzl  resolved_toolchain.bzl  toolchains_repo.bzl
patchelf_prebuilt/tests/: versions_test.bzl
tools/: BUILD.bazel  build.bzl  patchelf_sources.bzl
