load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("//patchelf_prebuilt:patchelf_binary.bzl", "patchelf_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

patchelf_binary(
    name = "patchelf",
)
