"Bazel dependencies"

module(
    name = "com_booking_rules_patchelf_prebuilt",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "gazelle", version = "0.37.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.7.7", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

patchelf_prebuilt = use_extension("//patchelf_prebuilt:extensions.bzl", "patchelf_prebuilt")
patchelf_prebuilt.toolchain(patchelf_prebuilt_version = "1.14.2")
use_repo(patchelf_prebuilt, "patchelf_prebuilt_toolchains")

register_toolchains("@patchelf_prebuilt_toolchains//:all")

patchelf_sources = use_extension(
    "//tools:patchelf_sources.bzl",
    "patchelf_sources",
    dev_dependency = True,
)
patchelf_sources.register()
use_repo(patchelf_sources, "patchelf_sources_v0.14.5")

bazel_dep(name = "rules_cc", version = "0.0.9", dev_dependency = True)
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0", dev_dependency = True)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:linux_arm64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
