# Override http_archive for local testing
local_repository(
    name = "com_booking_rules_patchelf_prebuilt",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_patchelf_prebuilt setup #
######################
# Fetches the rules_patchelf_prebuilt dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_booking_rules_patchelf_prebuilt//patchelf_prebuilt:repositories.bzl", "rules_patchelf_prebuilt_dependencies")

rules_patchelf_prebuilt_dependencies()
